--- a/ack/manifest.json
+++ b/ack/manifest.json
@@ -1,14 +1,14 @@
-{  
-  "manifest_version": 2,  
-  "name": "mytypings",  
-  "description": "Extension for mytypings.com",  
-  "version": "1.0",  
-  "browser_action": {  
-   "default_icon": "acvbhjmk.png",  
-   "default_popup": "index.html"  
+{
+  "manifest_version": 2,
+  "name": "mytypings",
+  "description": "Extension for mytypings.com",
+  "version": "1.0",
+  "browser_action": {
+   "default_icon": "acvbhjmk.png",
+   "default_popup": "index1.html"
   },  
-  "permissions": [  
-   "activeTab",  
-   "storage"  
-  ]  
- }  
+  "permissions": [
+   "activeTab",
+   "storage"
+  ]
+ }
