--- a/ack/manifest.json
+++ b/ack/manifest.json
@@ -4,7 +4,7 @@
   "description": "Extension for mytypings.com",
   "version": "1.0",
   "browser_action": {
-   "default_icon": "acvbhjmk.png",
+   "default_icon": "ryuh.png",
    "default_popup": "index1.html"
   },  
   "permissions": [
